# mmb4l

./: .clang-format  .gitmodules  CMakeLists.txt  ChangeLog  Hardware_Includes.h  LICENSE  LICENSE.MIT  LICENSE.MMBasic  Makefile  README.md  TODO  TODO.md  Version.h  build-all.sh  build.sh  package.sh  sanitise.sh
H/: Hardware_Includes  Version
MMBasic/: Commands.c  Commands.h  Functions.c  Functions.h  MMBasic.c  MMBasic.h  Operators.c  VarTable.h
MMBasic/C/: MMBasic  Operators
MMBasic/H/: Commands  MMBasic  VarTable
basic-src/splib/: array.inc  bits.inc  crypt.inc  file.inc  inifile.inc  math.inc  set.inc  string.inc  system.inc  txtwm.inc  vt100.inc
basic-src/sptest/: sptest.bas  unittest.inc
docker/: Dockerfile  Dockerfile-raspbian-pizero  README-docker.md
docker/mmb4l-0.5/: Dockerfile
docker/mmb4l-build-0.6/: Dockerfile  build-gcc-7.4.sh  build.sh
docker/mmbasic-build/: Dockerfile  mmbasic-build.sh
examples/: HelloWorld.bas  clock.bas  error.bas  include1.inc  mandelbrot.bas  matrix.inc  snake.bas  text.inc  tt4x6.fnt
examples/benchmarks/: bench.bas  grain.bas  sieve.bas  speed.bas  ta.bas  tain.txt  thimet.bas
linux/: .clang-format  CMakeLists.txt  ChangeLog  README  README.md  TODO  Version.h  package.sh  sanitise.sh
linux-src/: Configuration.h  DOS_Includes.h  Hardware_Commands.h  Hardware_Includes.h  keyboard_test.c  main.c  mmb4l_hardware_includes.h
linux-src/C/: keyboard_test  main
linux-src/H/: Hardware_Commands  mmb4l_hardware_includes
linux-src/commands/: cmd_autosave.c  cmd_call.c  cmd_cfunction.c  cmd_chdir.c  cmd_close.c  cmd_cls.c  cmd_console.c  cmd_copy.c  cmd_cursor.c  cmd_dummy.c  cmd_edit.c  cmd_end.c  cmd_error.c  cmd_execute.c  cmd_files.c  cmd_inc.c  cmd_kill.c  cmd_list.c  cmd_load.c  cmd_longstring.c  cmd_math.c  cmd_memory.c  cmd_mid.c  cmd_mkdir.c  cmd_new.c  cmd_on.c  cmd_open.c  cmd_option.c  cmd_pause.c  cmd_poke.c  cmd_print.c  cmd_quit.c  cmd_read.c  cmd_rename.c  cmd_rmdir.c  cmd_run.c  cmd_seek.c  cmd_settick.c  cmd_sort.c  cmd_system.c  (+4 more)
linux-src/common/: ArialNumFontPlus.h  Font_8x6.h  Hom_16x24_BLD.h  Hom_16x24_LE.h  IOPorts.h  Inconsola.h  MM_Misc.h  Misc_12x20_LE.h  X_8x13_LE.h  cjson.c  cmdline.c  cmdline.h  codepage.c  codepage.h  configuration.h  console.c  console.h  cstring.c  cstring.h  draw.c  draw.h  error.c  error.h  external.c  external.h  file.c  file.h  framebuffer.c  framebuffer.h  fun_json.c  fun_json.h  global_aliases.h  i2c.c  i2c.h  interrupt.c  interrupt.h  maths.c  maths.h  memory.c  memory.h  (+28 more)
linux-src/functions/: fun_at.c  fun_bound.c  fun_call.c  fun_choice.c  fun_chr.c  fun_cwd.c  fun_date.c  fun_datetime.c  fun_day.c  (+24 more)
linux/DOS/: BuildAll.bat  README.txt  RTEST.BAS  a.bas  t.bas  tt.bas  ttt.bas
linux/DOS/Source/: Configuration.h  DOS_Includes.h  DOS_Misc.c  DOS_Misc.h  Editor.c  Editor.h  File_IO.c  File_IO.h  Hardware_Commands.h  Hardware_Includes.h  Main.c  Memory.c  console.h  editor_stubs.c  file_io_stubs.c  fun_info.c  option.h
linux/DOS/Source/commands/: inc.c  longstring.c  poke.c
linux/DOS/Source/common/: console.c  utility.c  utility.h
linux/DOS/Source/functions/: choice.c  info.c  lgetbyte.c  peek.c
linux/MMBasic/: Commands.c  Commands.h  Functions.c  Functions.h  MMBasic.c  MMBasic.h  MMBasic_Includes.h  Operators.h  VarTable.h
linux/examples/: include2.inc  include_test.bas  mandelbrot.bas
linux/linux-src/: Configuration.h  DOS_Includes.h  Hardware_Commands.h  Hardware_Includes.h  editor.c  file_io.c  file_io.h  keyboard_test.c  main.c  memory.c  memory.h  misc.c  misc.h  serial.c
linux/linux-src/commands/: call.c  cls.c  cmd_cfunction.c  cmd_close.c  cmd_console.c  cmd_copy.c  cmd_edit.c  cmd_files.c  cmd_kill.c  cmd_list.c  cmd_load.c  cmd_longstring.c  cmd_math.c  cmd_memory.c  cmd_mkdir.c  cmd_on.c  cmd_open.c  cmd_option.c  cmd_pause.c  cmd_poke.c  cmd_quit.c  cmd_rename.c  cmd_rmdir.c  cmd_seek.c  cmd_timer.c  cmd_trace.c  colour.c  commands.h  cursor.c  dummy.c  exitmmb.c  inc.c  list.c  load.c  longstring.c  memory_cmd.c  mmb4l_commands.h  option.c  pause.c  poke.c  (+6 more)
linux/linux-src/common/: console.c  console.h  error.c  error.h  file.c  file.h  global_aliases.h  interrupt.c  maths.c  maths.h  memory.c  memory.h  parse.c  parse.h  program.c  program.h  prompt.c  utility.c  utility.h  version.h
linux/linux-src/functions/: cmdline_fun.c  device.c  dir.c  format.c  fun_bound.c  fun_call.c  fun_choice.c  fun_cwd.c  fun_dir.c  fun_hres.c  fun_inputstr.c  fun_linstr.c  fun_loc.c  fun_lof.c  fun_math.c  fun_mmcmdline.c  fun_mmdevice.c  fun_mminfo.c  fun_peek.c  fun_time.c  fun_timer.c  hres.c  info.c  lgetbyte.c  lgetstr.c  mmb4l_functions.h  mmcmdline.c  peek.c  rgb.c  vres.c
linux/linux-src/operators/: mmb4l_operators.h  op_inv.c
linux/resources/: .nanorc  mmbasic.nanorc
linux/resources/.nano/syntax/: mmbasic.nanorc
linux/tests/: longstring.bas  mminfo.bas  pause_and_timer.bas  peek_and_poke.bas  tst_execute.bas  tst_longstring.bas  tst_memory.bas  tst_mminfo.bas  tst_on_key.bas  tst_peek.bas  tst_poke.bas
linux/tools/: glibc-check.sh
resources/: mmb4l_codepages.csv  mmb4l_codepages.xlsx  mmbasic.nanorc  mmbasic.syntax.nanorc
src/: Configuration.h  Hardware_Commands.h  Hardware_Includes.h  Version.h  console_getc_test.c  keyboard_test.c  main.c
tests/: run_tests.bas  syntax.bas  tst_call.bas  tst_csub_as_data.bas  tst_data.bas  tst_error_handling.bas  tst_eval.bas  tst_file_fns.bas  tst_file_ops.bas  tst_fundamentals.bas  tst_inc.bas  tst_json.bas  tst_labels.bas  tst_longstring.bas  tst_math.bas  tst_memory.bas  tst_mmb4l_specifics.bas  tst_mminfo.bas  tst_options.bas  tst_pause_and_timer.bas  tst_peek.bas  tst_pins.bas.unused  tst_poke.bas  tst_setenv.bas  tst_simple_maths_fns.bas  tst_sort.bas  tst_static.bas  tst_strings.bas  tst_subfun.bas  tst_system.bas  tst_time_fns.bas  tst_variables.bas
tools/: bas_copyright.template  c-to-riscos.bas  c_copyright.template  c_mit_copyright.template  console.inc  glibc-check.sh  gonzo.bas  gonzo.inc  make_codepages.bas  spsh.inc  update_comments.bas
webasm/: mmbasic.html  xterm.html
(+391 files in other folders)
